--- a/FE/styles/register.css
+++ b/FE/styles/register.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("/image/Group_11.png");
+  background-image: url("../image/Group_11.png");
   font-family: sans-serif;
 }
 
