--- a/FE/styles/register.scss
+++ b/FE/styles/register.scss
@@ -1,7 +1,7 @@
 
 @import "_variables";
 body{
-    background-image: url("/image/Group_11.png");
+    background-image: url("../image/Group_11.png");
     font-family: sans-serif;
 }
 .container{
