--- a/FE/styles/forget.scss
+++ b/FE/styles/forget.scss
@@ -1,6 +1,6 @@
 @import "_variables";
 body{
-    background-image: url("/image/Group_11(2).png");
+    background-image: url("../image/Group_11(2).png");
     font-family: sans-serif;
     display: flex;
     flex-direction: column;
