--- a/FE/styles/resetpw.css
+++ b/FE/styles/resetpw.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("/image/Group_11(3).png");
+  background-image: url("../image/Group_11(3).png");
   font-family: sans-serif;
   display: -webkit-box;
   display: -ms-flexbox;
