--- a/FE/styles/style.css
+++ b/FE/styles/style.css
@@ -1,4 +1,206 @@
-a {
-  display: block;
+.container {
+  margin: 0px auto;
+  max-width: 1710px;
+}
+
+body {
+  margin: 0;
+  background-color: #f2f2f2f2;
+  font-family: sans-serif;
+}
+
+header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-image: url("../image/Scroll Group 1.png");
+  background-repeat: no-repeat;
+  background-position: 1% 1%;
+  background-size: cover;
+}
+
+header .hleft {
+  margin: 25px 50px;
+}
+
+header .hleft img {
+  width: 80px;
+  height: 63px;
+}
+
+header .hright {
+  margin: 25px 50px;
+}
+
+header .hright a {
+  font-size: 20px;
+  color: white;
+  text-decoration: none;
+  font-weight: bolder;
+}
+
+header .hright .lg {
+  background-color: #ba131a;
+  padding: 5px 20px;
+  margin-left: 15px;
+  border-radius: 10px;
+}
+
+.container .head {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: baseline;
+      -ms-flex-pack: baseline;
+          justify-content: baseline;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  margin-top: -20px;
+  margin-bottom: -23px;
+}
+
+.container .head span {
+  width: 285px;
+  height: 95px;
+  background-color: #012e6f;
+  position: relative;
+}
+
+.container .head span a {
+  color: white;
+  font-size: 25px;
+  text-decoration: none;
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+.container .head span:first-child {
+  border-top-left-radius: 8px;
+}
+
+.container .head span:last-child {
+  border-top-right-radius: 8px;
+}
+
+.container .head .red {
+  background-color: #ba131a;
+}
+
+.container .content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: #012e6f;
+}
+
+.container .content .right {
+  width: 855px;
+  position: relative;
+  background-color: #012e6f;
+}
+
+.container .content .right h1 {
+  position: absolute;
+  top: -150px;
+  right: -100px;
+  font-size: 2.5em;
+  color: #ffffff;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+  opacity: 0;
+  margin: 10px;
+}
+
+.container .content .right h2 {
+  position: absolute;
+  top: -100px;
+  right: -90px;
+  color: #ffffff;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+  opacity: 0;
+  margin: 10px;
+}
+
+.container .content .right h3 {
+  position: absolute;
+  top: -70px;
+  right: -80px;
+  padding-right: 10px;
+  color: #ffffff;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+  opacity: 0;
+}
+
+.container .content .right p {
+  position: absolute;
+  top: 10px;
+  right: -70px;
+  width: 600px;
+  color: #ffffff;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+  opacity: 0;
+}
+
+.container .content .right h1 {
+  -webkit-animation: fadeIn 4s forwards;
+          animation: fadeIn 4s forwards;
+}
+
+.container .content .right h2 {
+  -webkit-animation: fadeIn 4s forwards;
+          animation: fadeIn 4s forwards;
+}
+
+.container .content .right h3 {
+  -webkit-animation: fadeIn 4s forwards;
+          animation: fadeIn 4s forwards;
+}
+
+.container .content .right p {
+  -webkit-animation: fadeIn 4s forwards;
+          animation: fadeIn 4s forwards;
+}
+
+@-webkit-keyframes fadeIn {
+  from {
+    opacity: 0;
+    right: -100px;
+  }
+  to {
+    opacity: 1;
+    right: 150px;
+  }
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    right: -100px;
+  }
+  to {
+    opacity: 1;
+    right: 150px;
+  }
 }
 /*# sourceMappingURL=style.css.map */
