--- a/FE/styles/style.scss
+++ b/FE/styles/style.scss
@@ -1,3 +1,158 @@
-a {
-  display: block;
+@import "_variables";
+.container {
+  margin: 0px auto;
+  max-width: 1710px;
+}
+body {
+  margin: 0;
+  background-color: #f2f2f2f2;
+  font-family: sans-serif;
+}
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-image: url("../image/Scroll\ Group\ 1.png");
+  background-repeat: no-repeat;
+  background-position: 1% 1%;
+  background-size: cover;
+  .hleft {
+    margin: 25px 50px;
+    img {
+      width: 80px;
+      height: 63px;
+    }
+  }
+  .hright {
+    margin: 25px 50px;
+    a {
+      font-size: 20px;
+      color: white;
+      text-decoration: none;
+      font-weight: bolder;
+    }
+    .lg {
+      background-color: $primary-color2;
+      padding: 5px 20px;
+      margin-left: 15px;
+      border-radius: 10px;
+    }
+  }
+}
+.container {
+  .head {
+    display: flex;
+    justify-content: baseline;
+    align-items: center;
+    text-align: center;
+    margin-top: -20px;
+    margin-bottom: -23px;
+    span {
+      width: 285px;
+      height: 95px;
+      background-color: $primary-color1;
+      position: relative;
+      a {
+        color: white;
+        font-size: 25px;
+        text-decoration: none;
+        text-align: center;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+      }
+    }
+    span:first-child {
+      border-top-left-radius: 8px;
+    }
+    span:last-child {
+      border-top-right-radius: 8px;
+    }
+    .red {
+      background-color: $primary-color2;
+    }
+  }
+  .content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: $primary-color1;
+    .left {
+    }
+    .right {
+      width: 855px;
+      position: relative;
+      background-color: $primary-color1;
+      h1 {
+        position: absolute;
+        top: -150px;
+        right: -100px;
+        font-size: 2.5em;
+        color: #ffffff;
+        transition: all 0.3s;
+        opacity: 0;
+        margin: 10px;
+      }
+      h2 {
+        position: absolute;
+        top: -100px;
+        right: -90px;
+        color: #ffffff;
+        transition: all 0.3s;
+        opacity: 0;
+        margin: 10px;
+      }
+      h3 {
+        position: absolute;
+        top: -70px;
+        right: -80px;
+        padding-right: 10px;
+        color: #ffffff;
+        transition: all 0.3s;
+
+        opacity: 0;
+      }
+      p {
+        position: absolute;
+        top: 10px;
+        right: -70px;
+        width: 600px;
+        color: #ffffff;
+        transition: all 0.3s;
+
+        opacity: 0;
+      }
+    }
+  }
+}
+
+.container {
+  .content {
+    .right {
+      h1 {
+        animation: fadeIn 4s forwards;
+      }
+      h2 {
+        animation: fadeIn 4s forwards;
+      }
+      h3 {
+        animation: fadeIn 4s forwards;
+      }
+      p {
+        animation: fadeIn 4s forwards;
+      }
+    }
+  }
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    right: -100px;
+  }
+  to {
+    opacity: 1;
+    right: 150px;
+  }
 }
