--- a/FE/styles/viewTrip.css
+++ b/FE/styles/viewTrip.css
@@ -1,502 +1,1 @@
-.container {
-  margin: 0px auto;
-  max-width: 1000px;
-}
-
-body {
-  margin: 0;
-  background-color: #f2f2f2f2;
-}
-
-header {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  background-image: url("../image/Scroll Group 1.png");
-  background-repeat: no-repeat;
-  background-position: 1% 1%;
-  background-size: cover;
-}
-
-header .left {
-  margin: 15px 50px;
-}
-
-header .left img {
-  width: 80px;
-  height: 63px;
-}
-
-header .right {
-  margin: 15px 50px;
-}
-
-header .right a {
-  color: white;
-  text-decoration: none;
-  font-weight: bolder;
-}
-
-header .right .lg {
-  background-color: #ba131a;
-  padding: 5px 20px;
-  margin-left: 15px;
-  border-radius: 10px;
-}
-
-.container .head {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  margin-top: -27px;
-  margin-bottom: -20px;
-}
-
-.container .head h3 {
-  background-color: #012e6f;
-  padding: 20px 55px;
-  color: white;
-  border-top-left-radius: 8px;
-  border-top-right-radius: 8px;
-}
-
-.container .head .back i,
-.container .head .back a {
-  text-decoration: none;
-  color: #012e6f;
-  padding-right: 5px;
-}
-
-.container .content {
-  background-color: #ffffff;
-}
-
-.container .content .stepProgressBar {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.container .content .stepProgressBar .tablinks {
-  width: 800px;
-  text-align: center;
-  margin: 10px;
-}
-
-.container .content .stepProgressBar .tablinks .step-text {
-  margin-bottom: 10px;
-  color: #ba131a;
-  font-weight: bolder;
-  font-size: large;
-}
-
-.container .content .stepProgressBar .tablinks .bullet {
-  z-index: 10;
-  border: 2px solid #ba131a;
-  height: 25px;
-  width: 25px;
-  border-radius: 100%;
-  color: #ba131a;
-  background-color: #ffffff;
-  display: inline-block;
-  position: relative;
-  -webkit-transition: background-color 500ms;
-  transition: background-color 500ms;
-  line-height: 20px;
-}
-
-.container .content .stepProgressBar .tablinks .bullet.completed {
-  color: white;
-  background-color: #ba131a;
-}
-
-.container .content .stepProgressBar .tablinks .bullet::before {
-  content: "";
-  background-color: lightgray;
-  position: absolute;
-  top: 7px;
-  left: 27px;
-  height: 8px;
-  width: 250px;
-  z-index: 1;
-}
-
-.container .content .stepProgressBar .tablinks .bullet1::before {
-  content: none;
-}
-
-.container .content .stepProgressBar .tablinks .bullet.completed::after {
-  content: "";
-  background-color: #ba131a;
-  position: absolute;
-  top: 7px;
-  left: 27px;
-  height: 8px;
-  width: 250px;
-  z-index: 2;
-}
-
-.container .content .stepProgressBar .tablinks .bullet1.completed::after {
-  content: none;
-}
-
-.container .content .tabcontent {
-  text-align: center;
-}
-
-.container .content .tabcontent button {
-  background-color: #ba131a;
-  color: white;
-  border-radius: 10px;
-  border: 2px solid #ba131a;
-}
-
-.container .content .tabcontent .Step1content {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.container .content .tabcontent .Step1content h3 {
-  color: #ba131a;
-}
-
-.container .content .tabcontent .Step1content button {
-  background-color: #ba131a;
-  color: white;
-  border-radius: 10px;
-  border: 2px solid #ba131a;
-}
-
-.container .content .tabcontent .sel {
-  display: inline-block;
-  margin: 10px;
-  width: 200px;
-  background-color: transparent;
-  position: relative;
-  cursor: pointer;
-}
-
-.container .content .tabcontent .sel .active .sel__placeholder {
-  visibility: hidden;
-}
-
-.container .content .tabcontent .sel .active::before {
-  -webkit-transform: rotateX(-180deg);
-          transform: rotateX(-180deg);
-}
-
-.container .content .tabcontent .sel .sel__placeholder {
-  display: block;
-  font-family: "Quicksand";
-  color: #ba131a;
-  padding: 10px;
-  text-align: left;
-  pointer-events: none;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
-  visibility: visible;
-}
-
-.container .content .tabcontent .sel .sel__placeholder::before {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  padding: 10px;
-  content: attr(data-placeholder);
-  visibility: hidden;
-}
-
-.container .content .tabcontent .sel::before {
-  position: absolute;
-  content: "\f0d7";
-  font-family: "FontAwesome";
-  color: #ba131a;
-  right: 20px;
-  top: calc(50% - 10px);
-}
-
-.container .content .tabcontent .sel__box {
-  position: absolute;
-  top: calc(100% + 4px);
-  left: -4px;
-  display: none;
-  list-style-type: none;
-  text-align: left;
-  background-color: #fff;
-  width: calc(100% + 8px);
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-}
-
-.container .content .tabcontent .sel.active .sel__box {
-  display: block;
-  -webkit-animation: fadeInUp 500ms;
-          animation: fadeInUp 500ms;
-}
-
-.container .content .tabcontent .sel__box__options {
-  display: list-item;
-  font-family: "Quicksand";
-  color: #ba131a;
-  padding: 10px;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
-}
-
-.container .content .tabcontent .sel__box__options::after {
-  content: "\f00c";
-  font-family: "FontAwesome";
-  margin-left: 5px;
-  display: none;
-}
-
-.container .content .tabcontent .sel__box__options.selected::after {
-  display: inline;
-}
-
-.container .content .tabcontent .sel__box__options:hover {
-  background-color: #ba131a;
-  color: white;
-}
-
-.container .content .tabcontent .sel {
-  border: 2px solid #ba131a;
-  border-radius: 10px;
-}
-
-.container .content .tabcontent .sel--black-panther {
-  z-index: 3;
-}
-
-.container .content .tabcontent .getTrip h2 {
-  color: #ba131a;
-  margin: 10px;
-}
-
-.container .content .tabcontent .getTrip .trip {
-  border: 2px solid #012e6f;
-  border-radius: 10px;
-  margin: 10px 80px;
-}
-
-.container .content .tabcontent .getTrip .trip .below {
-  display: none;
-  -webkit-transition: all 0.3s ease;
-  transition: all 0.3s ease;
-}
-
-.container .content .tabcontent .getTrip .trip .below hr {
-  margin: 10px;
-}
-
-.container .content .tabcontent .getTrip .trip .below .seatNum {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.container .content .tabcontent .getTrip .trip .below .seatNum .left {
-  width: 200px;
-  border-right: 1px solid #ba131a;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: row wrap;
-          flex-flow: row wrap;
-  padding: 10px;
-}
-
-.container .content .tabcontent .getTrip .trip .below .seatNum .right {
-  width: 200px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: row wrap;
-          flex-flow: row wrap;
-  padding: 10px;
-}
-
-.container .content .tabcontent .getTrip .trip .below .seatNum span {
-  display: block;
-}
-
-.container .content .tabcontent .getTrip .trip .below .seatNum i {
-  font-size: 50px;
-  padding: 10px;
-  color: #012e6f;
-  -webkit-transition: all 0.3s ease;
-  transition: all 0.3s ease;
-}
-
-.container .content .tabcontent .getTrip .trip .below .seatNum i:hover {
-  color: #ba131a;
-}
-
-.container .content .tabcontent .getTrip .trip .title {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.container .content .tabcontent .getTrip .trip .title .tleft {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.container .content .tabcontent .getTrip .trip .title .tleft div {
-  margin: 15px 50px;
-}
-
-.container .content .tabcontent .getTrip .trip .title .tleft div h4 {
-  color: #012e6f;
-  margin: 0px;
-}
-
-.container .content .tabcontent .getTrip .trip .title .tleft div p {
-  color: #ba131a;
-  font-weight: 700;
-  margin: 0px;
-}
-
-.container .content .tabcontent .getTrip .trip .title .tright {
-  margin-right: 50px;
-}
-
-.container .content .tabcontent .stepBtn {
-  display: none;
-}
-
-.hidden {
-  display: none;
-}
-
-button {
-  padding: 5px 10px;
-  border: 1px solid black;
-  -webkit-transition: 250ms background-color;
-  transition: 250ms background-color;
-}
-
-button:hover {
-  cursor: pointer;
-  background-color: black;
-  color: white;
-}
-
-button:disabled:hover {
-  opacity: 0.6;
-  cursor: not-allowed;
-}
-
-.text-center {
-  text-align: center;
-}
-
-.other {
-  display: none;
-}
-
-/* ===== Keyframes ===== */
-@-webkit-keyframes fadeInUp {
-  from {
-    opacity: 0;
-    -webkit-transform: translate3d(0, 20px, 0);
-            transform: translate3d(0, 20px, 0);
-  }
-  to {
-    opacity: 1;
-    -webkit-transform: none;
-            transform: none;
-  }
-}
-@keyframes fadeInUp {
-  from {
-    opacity: 0;
-    -webkit-transform: translate3d(0, 20px, 0);
-            transform: translate3d(0, 20px, 0);
-  }
-  to {
-    opacity: 1;
-    -webkit-transform: none;
-            transform: none;
-  }
-}
-
-@-webkit-keyframes fadeOut {
-  from {
-    opacity: 1;
-  }
-  to {
-    opacity: 0;
-  }
-}
-
-@keyframes fadeOut {
-  from {
-    opacity: 1;
-  }
-  to {
-    opacity: 0;
-  }
-}
-/*# sourceMappingURL=viewTrip.css.map */
+/* No CSS *//*# sourceMappingURL=viewTrip.css.map */
