--- a/FE/styles/style.css
+++ b/FE/styles/style.css
@@ -206,38 +206,53 @@ footer {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  -webkit-box-align: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
+  -ms-flex-line-pack: stretch;
+      align-content: stretch;
   font-size: 20px;
-  padding: 20px 50px;
+  padding: 30px 50px;
 }
 
 footer .logo {
   width: 500px;
-  margin-left: 120px;
+  margin-left: 50px;
+  padding: 0px 50px;
+  background-color: #ba131a;
+  border-radius: 21px;
 }
 
 footer .logo img {
-  width: 80px;
-  height: 63px;
+  width: 100px;
+  height: 83px;
   border-radius: 20px;
-  border: 1px solid #d8d8d8;
-  background-color: #d8d8d8;
   padding: 15px;
   margin-top: 40px;
 }
 
 footer .logo p {
-  color: #012e6f;
+  color: #ffffff;
+  font-weight: bold;
 }
 
 footer .logo a {
-  color: #ba131a;
+  color: #ffffff;
 }
 
 footer .contact {
-  margin-left: 130px;
+  padding-left: 50px;
+  padding-right: 60px;
+  border-right: 1px solid #012e6f;
 }
 
 footer .contact h2 {
@@ -275,18 +290,26 @@ footer .contact div span i {
           transform: translate(-50%, -50%);
 }
 
+footer .contact div a,
 footer .contact div p {
   font-weight: bold;
   color: #012e6f;
+  text-decoration: none;
 }
 
 footer .fright {
   width: 500px;
-  margin-left: 150px;
+  padding-left: 50px;
 }
 
 footer .fright h2 {
   color: #ba131a;
+}
+
+footer .fright div {
+  width: 100px;
+  display: inline-block;
+  vertical-align: baseline;
 }
 
 footer .fright div a {
@@ -296,10 +319,15 @@ footer .fright div a {
   margin: 50px 0px;
 }
 
+footer .fright .info {
+  width: 400px;
+}
+
 footer .fright .info i {
   color: #ffffff;
   padding: 15px;
   background-color: #012e6f;
   margin: 20px 0px;
+  cursor: pointer;
 }
 /*# sourceMappingURL=style.css.map */
