--- a/FE/styles/manageUser.css
+++ b/FE/styles/manageUser.css
@@ -60,6 +60,23 @@ header .right .lg {
   border-radius: 10px;
 }
 
+main {
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+}
+
+main .container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  height: 100%;
+}
+
 main .container .head {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -100,6 +117,17 @@ main .container .head span:last-child {
 
 main .container .head .red {
   background-color: #ba131a;
+}
+
+main .container .content {
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 main .container .content .top {
@@ -151,5 +179,52 @@ main .container .content .top form input[type="submit"] {
   font-size: 30px;
   font-weight: bold;
   border-radius: 34px;
+}
+
+main .container .content .body {
+  width: 100%;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  border: 4px solid #012e6f;
+  border-radius: 24px;
+  margin: 20px 0;
+}
+
+main .container .content .body .list li {
+  font-size: 30px;
+  line-height: 33px;
+  padding: 30px 40px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  border-bottom: 1px solid #707070;
+}
+
+main .container .content .body .list li #email {
+  padding-left: 70px;
+}
+
+main .container .content .body .list li .btn-box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+main .container .content .body .list li .btn-box .button {
+  margin-left: 30px;
+  font-size: 20px;
+  line-height: 36px;
+  background-color: #012e6f;
+  color: #fff;
+  font-weight: bold;
+  padding: 0 20px;
+  border-radius: 18px;
 }
 /*# sourceMappingURL=manageUser.css.map */
