--- a/FE/styles/manageUser.scss
+++ b/FE/styles/manageUser.scss
@@ -43,7 +43,11 @@ header {
   }
 }
 main{
+  flex-grow: 1;
     .container{
+      display: flex;
+      flex-direction: column;
+      height: 100%;
         .head {
             display: flex;
             justify-content: center;
@@ -75,6 +79,10 @@ main{
             }
           }
         .content{
+          height: 100%;
+          display: flex;
+          flex-direction: column;
+
             .top{
                 padding-top: 50px;
                 form{
@@ -114,6 +122,40 @@ main{
                         border-radius:34px;
                     }
                 }
+            }
+            .body{
+              width: 100%;
+              flex-grow: 1;
+              border: 4px solid $primary-color1;
+              border-radius: 24px;
+              margin: 20px 0;
+              .list{
+                li{
+                  font-size: 30px;
+                  line-height:33px;
+                  padding: 30px 40px;
+                  display: flex;
+                  justify-content: space-between;
+                  border-bottom: 1px solid #707070;
+                  #email{
+                    padding-left: 70px;
+                  }
+                  .btn-box{
+                    display: flex;
+                    justify-content: space-between;
+                    .button{
+                      margin-left: 30px;
+                      font-size: 20px;
+                      line-height:36px;
+                      background-color: $primary-color1;
+                      color: #fff;
+                      font-weight: bold;
+                      padding: 0 20px;
+                      border-radius: 18px;
+                    }
+                  }
+                }
+              }
             }
         }
     }
