--- a/FE/styles/manageUser.css
+++ b/FE/styles/manageUser.css
@@ -142,9 +142,9 @@ main .container .content .top form {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
   width: 100%;
 }
 
@@ -158,12 +158,13 @@ main .container .content .top form a {
   font-size: 30px;
   font-weight: bold;
   border-radius: 34px;
+  margin: 0px 40px;
 }
 
 main .container .content .top form input[type="text"] {
   padding: 10px;
   font-size: 25px;
-  width: 1067px;
+  width: 1200px;
   height: 100%;
   border-radius: 13px;
   border: 3px solid #012e6f;
@@ -226,5 +227,6 @@ main .container .content .body .list li .btn-box .button {
   font-weight: bold;
   padding: 0 20px;
   border-radius: 18px;
+  cursor: pointer;
 }
 /*# sourceMappingURL=manageUser.css.map */
