--- a/FE/styles/manageUser.scss
+++ b/FE/styles/manageUser.scss
@@ -42,121 +42,122 @@ header {
     }
   }
 }
-main{
+main {
   flex-grow: 1;
-    .container{
+  .container {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    .head {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      margin-top: -20px;
+      margin-bottom: -23px;
+      span {
+        width: 285px;
+        height: 95px;
+        background-color: $primary-color1;
+        position: relative;
+        a {
+          font-weight: bold;
+          color: white;
+          font-size: 25px;
+          text-align: center;
+          line-height: 95px;
+        }
+      }
+      span:first-child {
+        border-top-left-radius: 8px;
+      }
+      span:last-child {
+        border-top-right-radius: 8px;
+      }
+      .red {
+        background-color: $primary-color2;
+      }
+    }
+    .content {
+      height: 100%;
       display: flex;
       flex-direction: column;
-      height: 100%;
-        .head {
-            display: flex;
-            justify-content: center;
-            align-items: center;
+      .top {
+        padding-top: 50px;
+        form {
+          height: 67px;
+          display: flex;
+          align-items: center;
+          justify-content: flex-start;
+          width: 100%;
+          a {
+            background-color: $primary-color2;
+            color: white;
+            width: 211px;
+            height: 100%;
+            line-height: 67px;
             text-align: center;
-            margin-top: -20px;
-            margin-bottom: -23px;
-            span {
-              width: 285px;
-              height: 95px;
-              background-color: $primary-color1;
-              position: relative;
-              a {
+            font-size: 30px;
+            font-weight: bold;
+            border-radius: 34px;
+            margin: 0px 40px;
+          }
+          input[type="text"] {
+            padding: 10px;
+            font-size: 25px;
+            width: 1200px;
+            height: 100%;
+            border-radius: 13px;
+            border: 3px solid $primary-color1;
+          }
+          input[type="submit"] {
+            background-color: $primary-color2;
+            color: white;
+            width: 155px;
+            height: 100%;
+            line-height: 67px;
+            text-align: center;
+            font-size: 30px;
+            font-weight: bold;
+            border-radius: 34px;
+          }
+        }
+      }
+      .body {
+        width: 100%;
+        flex-grow: 1;
+        border: 4px solid $primary-color1;
+        border-radius: 24px;
+        margin: 20px 0;
+        .list {
+          li {
+            font-size: 30px;
+            line-height: 33px;
+            padding: 30px 40px;
+            display: flex;
+            justify-content: space-between;
+            border-bottom: 1px solid #707070;
+            #email {
+              padding-left: 70px;
+            }
+            .btn-box {
+              display: flex;
+              justify-content: space-between;
+              .button {
+                margin-left: 30px;
+                font-size: 20px;
+                line-height: 36px;
+                background-color: $primary-color1;
+                color: #fff;
                 font-weight: bold;
-                color: white;
-                font-size: 25px;
-                text-align: center;
-                line-height: 95px;
+                padding: 0 20px;
+                border-radius: 18px;
+                cursor: pointer;
               }
-            }
-            span:first-child {
-              border-top-left-radius: 8px;
-            }
-            span:last-child {
-              border-top-right-radius: 8px;
-            }
-            .red {
-              background-color: $primary-color2;
             }
           }
-        .content{
-          height: 100%;
-          display: flex;
-          flex-direction: column;
-
-            .top{
-                padding-top: 50px;
-                form{
-                    height: 67px;
-                    display: flex;
-                    align-items: center;
-                    justify-content: space-between;
-                    width: 100%;
-                    a{
-                        background-color: $primary-color2;
-                        color: white;
-                        width: 211px;
-                        height: 100%;
-                        line-height: 67px;
-                        text-align: center;
-                        font-size: 30px;
-                        font-weight: bold;
-                        border-radius:34px;
-                    }
-                    input[type="text"]{
-                        padding: 10px;
-                        font-size: 25px;
-                        width: 1067px;
-                        height: 100%;
-                        border-radius:13px;
-                        border: 3px solid $primary-color1;
-                    }
-                    input[type="submit"]{
-                        background-color: $primary-color2;
-                        color: white;
-                        width: 155px;
-                        height: 100%;
-                        line-height: 67px;
-                        text-align: center;
-                        font-size: 30px;
-                        font-weight: bold;
-                        border-radius:34px;
-                    }
-                }
-            }
-            .body{
-              width: 100%;
-              flex-grow: 1;
-              border: 4px solid $primary-color1;
-              border-radius: 24px;
-              margin: 20px 0;
-              .list{
-                li{
-                  font-size: 30px;
-                  line-height:33px;
-                  padding: 30px 40px;
-                  display: flex;
-                  justify-content: space-between;
-                  border-bottom: 1px solid #707070;
-                  #email{
-                    padding-left: 70px;
-                  }
-                  .btn-box{
-                    display: flex;
-                    justify-content: space-between;
-                    .button{
-                      margin-left: 30px;
-                      font-size: 20px;
-                      line-height:36px;
-                      background-color: $primary-color1;
-                      color: #fff;
-                      font-weight: bold;
-                      padding: 0 20px;
-                      border-radius: 18px;
-                    }
-                  }
-                }
-              }
-            }
         }
+      }
     }
   }
+}
