--- a/FE/styles/createTrip.scss
+++ b/FE/styles/createTrip.scss
@@ -44,10 +44,10 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-top: -35px;
+    margin-top: -38px;
     margin-bottom: -23px;
     h3 {
-      background-color: $primary-color2;
+      background-color: $primary-color1;
       padding: 25px 55px;
       color: white;
       border-top-left-radius: 8px;
@@ -66,56 +66,47 @@ header {
   }
   .content {
     background-color: #ffffff;
-    margin-top: -25px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
+    margin-top: -51px;
+    padding-bottom: 10px;
     h1 {
       color: $primary-color2;
       text-align: center;
-      padding: 20px 0px;
-      font-size: 50px;
+      padding-top: 30px;
+      font-size: 40px;
     }
-    .tdoutput {
-      color: #656566;
-      font-size: 30px;
-      font-weight: normal;
-      font-style: italic;
-    }
-    td {
-      color: $primary-color1;
-      padding: 40px 0 20px 135px;
-      font-size: 30px;
-      font-weight: bold;
-    }
-    .inside {
-      height: 800px;
-      background-color: #ffffff;
-      .box {
-        width: 1000px;
-        height: 662px;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        border-radius: 20px;
-        border: 4px solid $primary-color1;
-
-        div {
-          display: flex;
-          flex-direction: column;
-          align-items: center;
-          justify-content: center;
+    .form {
+      width: 60%;
+      margin: 0 auto;
+      table {
+        margin: 10px auto;
+        tr {
+          th {
+            padding: 20px;
+            text-align: start;
+            label {
+              color: $primary-color1;
+              font-size: 27px;
+            }
+          }
+          td {
+            padding: 5px 0px;
+            input {
+              width: 400px;
+              font-size: 28px;
+              padding: 13px;
+              border: 4px solid $primary-color1;
+              border-radius: 20px;
+            }
+            button {
+              background-color: $primary-color2;
+              color: #ffffff;
+              padding: 15px;
+              border-radius: 20px;
+              font-size: 28px;
+              border: none;
+            }
+          }
         }
-      }
-      button {
-        color: #ffffff;
-        background-color: $primary-color2;
-        border-radius: 34px;
-        padding: 15px 20px;
-        border: none;
-        font-size: 20px;
-        font-weight: bold;
       }
     }
   }
