--- a/FE/styles/payment.scss
+++ b/FE/styles/payment.scss
@@ -89,7 +89,8 @@ header {
           border-radius: 20px;
           margin-bottom: 20px;
           div {
-            padding: 0px 120px;
+            padding: 0px 10px;
+            margin: 0px 100px;
             h4 {
               color: $primary-color1;
             }
