--- a/FE/styles/firstpage.scss
+++ b/FE/styles/firstpage.scss
@@ -45,6 +45,7 @@ header {
     flex-direction: column;
   .head {
     display: flex;
+    flex-direction: row;
     justify-content: space-between;
     align-items: center;
     margin-top: -35px;
@@ -104,40 +105,125 @@ header {
         justify-content: center;
         border-radius: 20px;
         
+
       
         .flex{
             display: flex;
             flex-direction: row;
+            margin: 70px;
+
+            .custom-select{
+              position: relative;
+              color: $primary-color2;
+              font-size: 24px;
+              text-transform: uppercase;
+              font-weight: bold;
+
+            }
+
+            .custom-select select{
+              display: none;
+            }
+
+            .select-selected{
+              background-color: #ffffff;
+            }
+
+            .select-selected:after {
+              position: absolute;
+              content: "";
+              top: 14px;
+              right: 10px;
+              width: 0;
+              height: 0;
+              border: 6px solid transparent;
+              border-color: $primary-color2 transparent transparent transparent;
+              margin-top: 50px;
+              margin-right: 20px;
+            }
+
+            .select-selected.select-arrow-active:after {
+              border-color: transparent transparent $primary-color2 transparent;
+              top: 7px;
+            }
+
+            .select-items div,.select-selected {
+              color: $primary-color2;
+              padding: 8px 16px;
+              border: 1px solid transparent;
+              // margin-left: -17px;
+              cursor: pointer;
+            }
+
+            .select-items {
+              position: absolute;
+              background-color: #ffffff;
+              top: 100%;
+              left: 0;
+              right: 0;
+              z-index: 99;
+            }
+            
+            .select-hide {
+              display: none;
+            }
+            
+            .select-items div:hover, .same-as-selected {
+              background-color: $primary-color2;
+              color: #fff;
+            }
             .rbox{
-                padding-right: 115px;
-    
+                padding-right: 35px;
+                padding-left: 35px;
+                margin-right: 60px;
+                width: 730px;
+                height: 117px;
+                border-radius: 16px;
+                border: solid 1px #d8d8d8;
+                
                 h4{
-                    font-size: 30px;
+                    font-size: 13px;
                     color: $primary-color1;
-                    margin-bottom: 55px;
+                    
                 }
+                   
+              
             }
             .lbox{
-                padding-top: 15px;
-                
-                input{
-                    width: 536px;
-                    height: 57px;
-                    border-radius: 7px;
-                    border: 1px solid #d8d8d8;
-                    font-size: 30px;
-                    margin-bottom: 30px;
-                }
+                // padding-top: 15px;
+                padding-right: 35px;
+                padding-left: 35px;
+                width: 730px;
+                height: 117px;
+                border-radius: 16px;
+                border: solid 1px #d8d8d8;
+                // input{
+                //     width: 536px;
+                //     height: 57px;
+                //     border-radius: 7px;
+                //     border: 1px solid #d8d8d8;
+                //     font-size: 30px;
+                //     margin-bottom: 30px;
+                // }
+                h4{
+                  font-size: 13px;
+                  color: $primary-color1;
+                  
+              }
             }
+            
         }
+        
         // div{
         //   display: flex;
         //   flex-direction: column;
         //   align-items: center;
         //   justify-content: center;
         // }
+      
         
       }
+
       button {
         color: #ffffff;
         background-color: $primary-color2;
@@ -152,3 +238,67 @@ header {
     
   }
 }
+
+.search{
+  width: 308px;
+  height: 76px;
+  border-radius: 13px;
+  background-color: $primary-color2;
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  margin-top: -38px;
+  margin-left: 1300px;
+
+  a{
+    font-size: 21px;
+    font-weight: bold;
+    color: #fff;
+    text-decoration: none;
+    text-align: center;
+    justify-content: center;
+    margin-top: 25px;
+  }
+
+  .icon{
+    width: 29px;
+    height: 17px;
+    margin-left: 20px;
+    margin-top: 29px;
+  }
+
+}  
+
+.other{
+  display: flex;
+  flex-direction: row;
+  margin-top: 25px;
+
+  .lother{
+    a{
+      font-size: 23px;
+      color: $primary-color1;
+      margin-left: 20px;
+    }
+    .sort{
+      width: 16px;
+      height: 16px;
+      margin-top: 7px;
+      margin-left: 5px;
+    }
+  }
+
+  .rother{
+    a{
+      font-size: 23px;
+      color: $primary-color1;
+      margin-right: 20px;
+      margin-left: 1250px;
+      text-decoration: underline;
+    }
+  }
+
+  
+
+}
+
